--- a/index.html
+++ b/index.html
@@ -1,52 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/logo/favicon-32x32.png"
-    />
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Gelasio&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="css/main.css">
+   <meta charset="UTF-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <link rel="icon" type="image/png" sizes="32x32" href="assets/logo/favicon-32x32.png" />
+   <link rel="preconnect" href="https://fonts.googleapis.com" />
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   <link href="https://fonts.googleapis.com/css2?family=Gelasio&display=swap" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+   <link rel="stylesheet" href="css/main.css" />
    <title>Anthony Martinez | UI/UX Designer</title>
 </head>
 
-<body class="bg-offWhite">
+<body class="bg-white">
    <!-- Navbar -->
    <nav class="relative container mx-auto py-6">
       <!-- Flex Container -->
       <div class="flex items-center justify-between">
          <!-- Logo -->
          <div class="pt-2">
-            <img src="assets/logo/logo-white.svg" alt="Logo for Anthony Martinez"/>
+            <a href="#work">
+               <img src="assets/logo/logo-dark.svg" alt="Logo for Anthony Martinez" />
+            </a>
          </div>
          <!-- Menu Items -->
          <div class="hidden space-x-12 text-darkGrey md:flex">
             <a href="#" class="hover-underline-animation py-1">About</a>
             <a href="#" class="hover-underline-animation py-1">Contact</a>
+            <a href="#" class="hover-underline-animation py-1">Resume</a>
          </div>
       </div>
    </nav>
 
    <!-- Hero Section -->
    <section id="hero">
+
       <!-- Flex Container -->
-      <div class="container mx-auto flex items-center justify-between">
-         <div>
-            <h1 class="max-w-md text-7xl font-gelasio text-darkGrey">Hi There, I'm Anthony</h1>
-            <p class="max-w-md font-inter text-darkGrey">A designer focused on UI/UX design, visual design and prototyping.</p>
+      <div class="container flex flex-col-reverse items-center px-6 mx-auto mt-20 mb-32 space-y-0 md:space-y-0 md:flex-row md:mb-60 md:px-0">
+
+         <!-- Hero Content -->
+         <div class="flex flex-col space-y-8 md:w-1/2">
+
+            <!-- Heading Text -->
+            <h1 class="text-5xl font-gelasio text-center text-darkGrey md:text-7xl md:text-left md:max-w-md">Hello there, I'm Anthony</h1>
+
+            <!-- Paragraph Text -->
+            <p class="text-lg font-inter text-center text-darkGrey md:text-left md:max-w-sm">
+               A Product Designer experienced in front-end development focused on
+               UI/UX design, visual design and prototyping.</p>
+
+            <!-- See Work Button -->
+            <div class="flex justify-center md:justify-start">
+               <a href="#work"
+                  class="p-3 px-6 text-darkGrey bg-pastelGreen rounded-full baseline hover:bg-pastelGreenHover duration-300 md:block">See
+                  Work</a>
+            </div>
+
          </div>
-         <div>
-            <img src="" alt="">
+
+         <!-- Image -->
+         <div class="md:w-1/2">
+            <img 
+               src="assets/img/hero-image.png"
+               alt="Image of Anthony Martinez"
+               class="mb-12 md:mb-0"
+            />
          </div>
+
       </div>
+
    </section>
+
+   <!-- Selected Work Section -->
+   <section id="work">
+
+      <!-- Container -->
+      <div class="container mx-auto py-12">
+
+         <!-- Work Section Heading -->
+         <h2 class="text-2xl font-inter text-darkGrey py-2 md:max-w-sm">Selected Work</h2>
+         <div class="divider bg-darkGrey"></div>
+
+         <!-- Portfolio Item 1 Flex Container -->
+         <div class="flex flex-col-reverse justify-center items-center bg-lightGrey rounded-xl mt-20 py-6 space-y-0 md:space-y-0 md:flex-row">
+
+            <!-- Portfolio Item Content Block -->
+            <div class="space-y-8 md:w-1/2">
+
+               <!-- Heading -->
+               <h3 class="text-3xl font-gelasio text-center text-darkGrey md:text-5xl md:text-left md:max-w-md">Makr</h3>
+
+               <!-- Description -->
+               <p class="text-lg font-inter text-center text-darkGrey md:text-left md:max-w-sm">Makr is a new kind of dating app that allows users to choose a dating path and provides them with date suggestions.</p>
+
+               <!-- See Case Study Button -->
+               <div class="flex justify-center md:justify-start">
+                  <a href="https://ajrtinez.medium.com/ux-the-dating-experience-716f390fe233"
+                     target="_blank"
+                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline hover:bg-darkGreyHover duration-300 md:block">See
+                     Case Study</a>
+               </div>
+
+            </div>
+
+            <!-- Portfolio Image -->
+            <div>
+               <img
+                  src="assets/img/makr-image.png"
+                  alt="Image of Anthony Martinez"
+                  class="mb-8 md:mb-0"
+               />
+            </div>
+
+         </div>
+
+      </div>
+
+   </section>
+
+   <!-- Let's Connect Section -->
+   <section>
+      
+      <!-- Flex Container -->
+      <div class="container mx-auto mt-20 py-12">
+
+         <h2 class="text-2xl font-inter text-darkGrey py-2 md:max-w-sm">Let's Connect</h2>
+         <div class="divider bg-darkGrey"></div>
+
+         <div class="container flex items-center mt-8">
+
+            <!-- Email Link -->
+            <div class="hover-underline-animation py-1">
+               <a 
+                  href="mailto: anthony@anthonymartinez.io"
+                  class="text-2xl font-gelasio text-center text-darkGrey md:text-3xl md:text-left md:max-w-md"
+                  >
+                  anthony@anthonymartinez.io
+               </a>
+            </div>
+
+            <!-- Arrow Icon SVG -->
+            <div class="mx-4">
+               <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+               <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+               </svg>
+            </div>
+            
+         </div>
+
+      </div>
+
+   </section>
+
+   <footer>
+      <div class="container mx-auto">
+         <p>Hello Footer</p>
+      </div>
+   </footer>
+
 </body>
+
 </html>
