--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          <!-- Menu Items -->
          <div class="hidden space-x-12 text-darkGrey md:flex">
             <a href="#" class="hover-underline-animation py-1">About</a>
-            <a href="#" class="hover-underline-animation py-1">Contact</a>
+            <a href="mailto: anthony@anthonymartinez.io" class="hover-underline-animation py-1">Contact</a>
             <a href="#" class="hover-underline-animation py-1">Resume</a>
          </div>
       </div>
@@ -84,7 +84,7 @@
          <div class="divider bg-darkGrey"></div>
 
          <!-- Portfolio Item 1 Flex Container -->
-         <div class="flex flex-col-reverse justify-center items-center bg-lightGrey rounded-xl mt-20 py-6 space-y-0 md:space-y-0 md:flex-row">
+         <div class="flex flex-col-reverse justify-center items-center bg-lightGrey rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:py-6">
 
             <!-- Portfolio Item Content Block -->
             <div class="space-y-8 md:w-1/2">
@@ -116,6 +116,37 @@
 
          </div>
 
+         <!-- Portfolio Item 2 Flex Container -->
+         <div class="flex flex-col-reverse justify-center items-center bg-darkGrey rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:py-6">
+
+            <!-- Portfolio Item Content Block -->
+            <div class="space-y-8 md:w-1/2">
+
+               <!-- Heading -->
+               <h3 class="text-3xl font-gelasio text-center text-white md:text-5xl md:text-left md:max-w-md">Dished</h3>
+
+               <!-- Description -->
+               <p class="text-lg font-inter text-center text-white md:text-left md:max-w-sm">Dished is a new kind of recipe app that gives users a simple and convenient way to discover and save new recipes.</p>
+
+               <!-- See Case Study Button -->
+               <div class="flex justify-center md:justify-start">
+                  <a href="#"
+                     class="p-3 px-6 text-darkGrey bg-white rounded-full baseline hover:bg-whiteHover duration-300 md:block">Coming Soon</a>
+               </div>
+
+            </div>
+
+            <!-- Portfolio Image -->
+            <div>
+               <img
+                  src="assets/img/dished-image.png"
+                  alt="Image of Anthony Martinez"
+                  class="mb-8 md:mb-0"
+               />
+            </div>
+
+         </div>
+
       </div>
 
    </section>
@@ -124,7 +155,7 @@
    <section>
       
       <!-- Flex Container -->
-      <div class="container mx-auto mt-20 py-12">
+      <div class="container mx-auto mt-20 mb-20 py-12">
 
          <h2 class="text-2xl font-inter text-darkGrey py-2 md:max-w-sm">Let's Connect</h2>
          <div class="divider bg-darkGrey"></div>
@@ -154,10 +185,37 @@
 
    </section>
 
-   <footer>
-      <div class="container mx-auto">
-         <p>Hello Footer</p>
+   <!-- Footer Section -->
+   <footer class="bg-darkGrey">
+
+      <div class="container flex flex-col justify-between items-center mx-auto px-6 py-8 space-y-10 md:px-0 md:flex-row md:space-y-0">
+
+         <!-- Logo -->
+         <div class="pt-2">
+            <a href="#work">
+               <img src="assets/logo/logo-white.svg" alt="Logo for Anthony Martinez" />
+            </a>
+         </div>
+
+         <!-- Social -->
+         <div class="flex flex-row items-center space-x-6 font-inter text-white">
+            <a href="#" class="items-center">
+               <img src="assets/icon/linkedin.svg" alt="Logo for LinkedIn">
+            </a>
+            <a href="#" class="items-center">
+               <img src="assets/icon/codepen.svg" alt="Logo for Codepen">
+            </a>
+            <a href="#" class="items-center">
+               <img src="assets/icon/github.svg" alt="Logo for GitHub">
+            </a>
+         </div>
+
+         <!-- Copyright -->
+         <div class="font-inter text-white">
+            <p>Anthony Martinez © 2022</p>
+         </div>
       </div>
+
    </footer>
 
 </body>
