Adding Makr Project

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="flex items-center justify-between">
          <!-- Logo -->
          <div class="pt-2">
-            <a href="#work">
+            <a href="index.html">
                <img src="assets/logo/logo-dark.svg" alt="Logo for Anthony Martinez" />
             </a>
          </div>
@@ -97,10 +97,8 @@
 
                <!-- See Case Study Button -->
                <div class="flex justify-center md:justify-start">
-                  <a href="https://ajrtinez.medium.com/ux-the-dating-experience-716f390fe233"
-                     target="_blank"
-                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline hover:bg-darkGreyHover duration-300 md:block">See
-                     Case Study</a>
+                  <a href="makr.html"
+                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline hover:bg-darkGreyHover duration-300 md:block">See More</a>
                </div>
 
             </div>
@@ -192,20 +190,20 @@
 
          <!-- Logo -->
          <div class="pt-2">
-            <a href="#work">
+            <a href="index.html">
                <img src="assets/logo/logo-white.svg" alt="Logo for Anthony Martinez" />
             </a>
          </div>
 
          <!-- Social -->
          <div class="flex flex-row items-center space-x-6 font-inter text-white">
-            <a href="#" class="items-center">
+            <a href="https://www.linkedin.com/in/anthonymartinez86/" target="_blank" class="items-center">
                <img src="assets/icon/linkedin.svg" alt="Logo for LinkedIn">
             </a>
-            <a href="#" class="items-center">
+            <a href="https://codepen.io/ajrtinez" target="_blank" class="items-center">
                <img src="assets/icon/codepen.svg" alt="Logo for Codepen">
             </a>
-            <a href="#" class="items-center">
+            <a href="https://github.com/ajrtinez" target="_blank" class="items-center">
                <img src="assets/icon/github.svg" alt="Logo for GitHub">
             </a>
          </div>
