Update Makr project and index colors

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <!-- See Work Button -->
             <div class="flex justify-center md:justify-start">
                <a href="#work"
-                  class="p-3 px-6 text-darkGrey bg-pastelGreen rounded-full baseline hover:bg-pastelGreenHover duration-300 md:block">See
+                  class="p-3 px-6 text-white bg-darkGrey rounded-full baseline hover:bg-darkGreyHover duration-300 md:block">See
                   Work</a>
             </div>
 
