Added Officelite Project

--- a/officelite.html
+++ b/officelite.html
@@ -10,7 +10,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Gelasio&display=swap" rel="stylesheet" />
    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
    <link rel="stylesheet" href="css/main.css" />
-   <title>Makr | Mobile Dating App</title>
+   <title>Officelite | Landing Page Design</title>
 </head>
 
 <body class="bg-bgGrey bg-noise-overlay">
@@ -44,21 +44,20 @@
          <div class="flex flex-col space-y-8 md:w-1/2">
 
             <!-- Heading Text -->
-            <h1 class="text-5xl font-gelasio text-darkGrey md:text-7xl md:max-w-md">Makr</h1>
+            <h1 class="text-5xl font-gelasio text-darkGrey md:text-7xl md:max-w-md">Officelite</h1>
 
             <!-- Paragraph Text -->
             <p class="text-lg font-inter text-darkGrey md:max-w-sm">
-               Makr is a new dating app concept that came about through a General Assembly product design bootcamp. If you want to see the full case study hit the link below.</p>
+               Officelite is a web design and development project for a fictional company.</p>
 
             <!-- Case Study Link -->
             <div class="container flex items-center mt-8"> 
                <div class="hover-underline-animation py-1">
                   <a 
-                     href="https://ajrtinez.medium.com/ux-the-dating-experience-716f390fe233"
-                     target="_blank"
+                     href="#"
                      class="text-2xl font-gelasio text-center text-darkGrey md:text-2xl md:text-left md:max-w-md"
                   >
-                     Full Case Study
+                     Live Site Coming Soon
                   </a>
                   </div>
       
@@ -75,7 +74,7 @@
          <!-- Portfolio Image -->
          <div>
             <img
-               src="assets/img/makr-image.png"
+               src="assets/img/officelite-cover.png"
                alt="Image of Anthony Martinez"
                class="mb-8 md:mb-0"
             />
@@ -85,69 +84,22 @@
 
    </section>
 
-   <!-- Branding Section -->
-   <section id="makr-branding">
-
-      <div class="container mx-auto py-12">
-
-         <!-- Heading and Divider -->
-         <h2 class="text-2xl font-inter text-darkGrey py-2 md:max-w-sm">Branding</h2>
-         <div class="divider bg-darkGrey"></div>
-
-         <!-- Branding Grid -->
-         <div class="grid grid-cols-3 gap-4 py-16">
-            <div>
-               <img src="assets/img/makr-colors.jpg" alt="">
-            </div>
-            <div class="col-span-2">
-               <img src="assets/img/makr-brand.jpg" alt="">
-            </div>
-         </div>
-
-      </div>
-
-   </section>
-
-   <!-- UX/UI Section -->
+   <!-- Web Design Section -->
    <section>
 
       <div class="container mx-auto py-12">
 
          <!-- Heading and Divider -->
-         <h2 class="text-2xl font-inter text-darkGrey py-2 md:max-w-sm">UX and UI</h2>
+         <h2 class="text-2xl font-inter text-darkGrey py-2 md:max-w-sm">Site Design</h2>
          <div class="divider bg-darkGrey"></div>
 
          <!-- UX/UI Grid -->
          <div class="grid grid-cols-4 gap-24 py-16">
             <!-- Row 1 -->
             <div class="col-span-4">
-               <img src="assets/img/makr-sign-in.png" alt="">
+               <img src="assets/img/officelite-design.jpg" alt="" class="drop-shadow-lg">
             </div>
-            <!-- Row 2 -->
-            <div class="col-span-4 md:col-span-3">
-               <p class="font-inter text-lg text-center md:text-xl md:text-left">Once the user is logged in they are prompted with the option to fill out the basic profile. They are able to decline and finish it later, but they won't be matched until they do.</p>
-            </div>
-            <!-- Row 3 -->
-            <div class="col-span-4">
-               <img src="assets/img/makr-dashboard-landing.png" alt="">
-            </div>
-            <!-- Row 4 -->
-            <div class="col-span-4 md:col-span-3">
-               <p class="font-inter text-lg text-center md:text-xl md:text-left">The goal was to make any process that required the user to fill out the information to be as simple as possible. The photo upload section of the sign-up process was reduced to just one required photo instead of multiple photos.</p>
-            </div>
-            <!-- Row 5 -->
-            <div class="col-span-4">
-               <img src="assets/img/makr-add-photo.png" alt="">
-            </div>
-            <!-- Row 6 -->
-            <div class="col-span-4 md:col-span-3">
-               <p class="font-inter text-lg text-center md:text-xl md:text-left">The "Like" feature is different from others in that once both users like each other a 24-hour communication window opens up.</p>
-            </div>
-            <!-- Row 7 -->
-            <div class="col-span-4">
-               <img src="assets/img/makr-liked-flow.png" alt="">
-            </div>
-      </div>
+         </div>
 
    </section>
 
