--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
    <title>Anthony Martinez | UI/UX Designer</title>
 </head>
 
-<body class="bg-white">
+<body class="bg-bgGrey bg-noise-overlay">
    <!-- Navbar -->
    <nav class="relative container mx-auto py-6">
       <!-- Flex Container -->
-      <div class="flex items-center justify-between">
+      <div class="flex px-4 items-center justify-between md:px-0">
          <!-- Logo -->
          <div class="pt-2">
             <a href="index.html">
@@ -26,10 +26,10 @@
             </a>
          </div>
          <!-- Menu Items -->
-         <div class="hidden space-x-12 text-darkGrey md:flex">
+         <div class="space-x-12 text-darkGrey flex">
             <a href="#" class="hover-underline-animation py-1">About</a>
             <a href="mailto: anthony@anthonymartinez.io" class="hover-underline-animation py-1">Contact</a>
-            <a href="#" class="hover-underline-animation py-1">Resume</a>
+            <!-- <a href="#" class="hover-underline-animation py-1">Resume</a> -->
          </div>
       </div>
    </nav>
@@ -84,7 +84,7 @@
          <div class="divider bg-darkGrey"></div>
 
          <!-- Portfolio Item 1 Flex Container -->
-         <div class="flex flex-col-reverse justify-center items-center bg-lightGrey rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:py-6">
+         <div class="flex flex-col-reverse justify-between px-8 items-center border-2 border-dashGrey border-dashed hover:bg-dashGrey hover:bg-opacity-30 duration-300 rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:px-16 md:py-6">
 
             <!-- Portfolio Item Content Block -->
             <div class="space-y-8 md:w-1/2">
@@ -98,7 +98,7 @@
                <!-- See Case Study Button -->
                <div class="flex justify-center md:justify-start">
                   <a href="makr.html"
-                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline hover:bg-darkGreyHover duration-300 md:block">See More</a>
+                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline md:block">See More</a>
                </div>
 
             </div>
@@ -115,21 +115,52 @@
          </div>
 
          <!-- Portfolio Item 2 Flex Container -->
-         <div class="flex flex-col-reverse justify-center items-center bg-darkGrey rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:py-6">
+         <div class="flex flex-col-reverse justify-between px-8 items-center border-2 border-dashGrey border-dashed hover:bg-dashGrey hover:bg-opacity-30 duration-300 rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:px-16 md:py-6">
 
             <!-- Portfolio Item Content Block -->
             <div class="space-y-8 md:w-1/2">
 
                <!-- Heading -->
-               <h3 class="text-3xl font-gelasio text-center text-white md:text-5xl md:text-left md:max-w-md">Dished</h3>
+               <h3 class="text-3xl font-gelasio text-center text-darkGrey md:text-5xl md:text-left md:max-w-md">Officelite</h3>
 
                <!-- Description -->
-               <p class="text-lg font-inter text-center text-white md:text-left md:max-w-sm">Dished is a new kind of recipe app that gives users a simple and convenient way to discover and save new recipes.</p>
+               <p class="text-lg font-inter text-center text-darkGrey md:text-left md:max-w-sm">Officelite is a landing page design and development for a fictional company.</p>
+
+               <!-- See Case Study Button -->
+               <div class="flex justify-center md:justify-start">
+                  <a href="officelite.html"
+                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline md:block">See More</a>
+               </div>
+
+            </div>
+
+            <!-- Portfolio Image -->
+            <div>
+               <img
+                  src="assets/img/officelite-cover.png"
+                  alt="Image of Anthony Martinez"
+                  class="mb-8 md:mb-0"
+               />
+            </div>
+
+         </div>
+
+         <!-- Portfolio Item 3 Flex Container -->
+         <div class="flex flex-col-reverse justify-between px-8 items-center border-2 border-dashGrey border-dashed hover:bg-dashGrey hover:bg-opacity-30 duration-300 rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:px-16 md:py-6">
+
+            <!-- Portfolio Item Content Block -->
+            <div class="space-y-8 md:w-1/2">
+
+               <!-- Heading -->
+               <h3 class="text-3xl font-gelasio text-center text-darkGrey md:text-5xl md:text-left md:max-w-md">Dished</h3>
+
+               <!-- Description -->
+               <p class="text-lg font-inter text-center text-darkGrey md:text-left md:max-w-sm">Dished is a new kind of recipe app that gives users a simple and convenient way to discover and save new recipes.</p>
 
                <!-- See Case Study Button -->
                <div class="flex justify-center md:justify-start">
                   <a href="#"
-                     class="p-3 px-6 text-darkGrey bg-white rounded-full baseline hover:bg-whiteHover duration-300 md:block">Coming Soon</a>
+                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline md:block">Coming Soon</a>
                </div>
 
             </div>
@@ -215,7 +246,6 @@
       </div>
 
    </footer>
-
 </body>
 
 </html>
