Fixed spacing issues

--- a/officelite.html
+++ b/officelite.html
@@ -15,6 +15,9 @@
 
 <body class="bg-bgGrey bg-noise-overlay">
    
+   <!-- Page Wrapper -->
+   <div class="px-6 md:px-0">
+
    <!-- Navbar -->
    <nav class="relative container mx-auto py-6">
       <!-- Flex Container -->
@@ -27,7 +30,7 @@
          </div>
          <!-- Menu Items -->
          <div class="space-x-12 text-darkGrey flex">
-            <a href="#" class="hover-underline-animation py-1">About</a>
+            <a href="index.html" class="hover-underline-animation py-1">Home</a>
             <a href="mailto: anthony@anthonymartinez.io" class="hover-underline-animation py-1">Contact</a>
             <!-- <a href="#" class="hover-underline-animation py-1">Resume</a> -->
          </div>
@@ -136,7 +139,8 @@
       </div>
 
    </section>
-
+</div>
+</div>
    <!-- Footer Section -->
    <footer class="bg-darkGrey">
 
