--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 
 <body class="bg-bgGrey bg-noise-overlay">
+
+   <!-- Page Wrapper -->
+   <div class="px-6 md:px-0">
+
    <!-- Navbar -->
    <nav class="relative container mx-auto py-6">
       <!-- Flex Container -->
@@ -26,8 +30,8 @@
             </a>
          </div>
          <!-- Menu Items -->
-         <div class="space-x-12 text-darkGrey flex">
-            <a href="#" class="hover-underline-animation py-1">About</a>
+         <div class="space-x-8 text-darkGrey flex md:space-x-12">
+            <a href="index.html" class="hover-underline-animation py-1">Home</a>
             <a href="mailto: anthony@anthonymartinez.io" class="hover-underline-animation py-1">Contact</a>
             <!-- <a href="#" class="hover-underline-animation py-1">Resume</a> -->
          </div>
@@ -38,7 +42,7 @@
    <section id="hero">
 
       <!-- Flex Container -->
-      <div class="container flex flex-col-reverse items-center px-6 mx-auto mt-20 mb-32 space-y-0 md:space-y-0 md:flex-row md:mb-60 md:px-0">
+      <div class="container flex flex-col-reverse items-center px-6 mx-auto mt-10 mb-32 space-y-0 md:space-y-0 md:flex-row md:mb-60 md:px-0 md:mt-20">
 
          <!-- Hero Content -->
          <div class="flex flex-col space-y-8 md:w-1/2">
@@ -65,7 +69,7 @@
             <img 
                src="assets/img/hero-image.png"
                alt="Image of Anthony Martinez"
-               class="mb-12 md:mb-0"
+               class="mb-20 md:mb-0"
             />
          </div>
 
@@ -213,6 +217,7 @@
       </div>
 
    </section>
+</div>
 
    <!-- Footer Section -->
    <footer class="bg-darkGrey">
