Fixed connect link sizing

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="hover-underline-animation py-1">
                <a 
                   href="mailto: anthony@anthonymartinez.io"
-                  class="text-2xl font-gelasio text-center text-darkGrey md:text-3xl md:text-left md:max-w-md"
+                  class="text-xl font-gelasio text-center text-darkGrey md:text-3xl md:text-left md:max-w-md"
                   >
                   anthony@anthonymartinez.io
                </a>
