Updated buttons and Logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          <!-- Logo -->
          <div class="pt-2">
             <a href="index.html">
-               <img src="assets/logo/logo-dark.svg" alt="Logo for Anthony Martinez" />
+               <img src="assets/logo/am-logo.svg" alt="Logo for Anthony Martinez" />
             </a>
          </div>
          <!-- Menu Items -->
@@ -48,7 +48,7 @@
          <div class="flex flex-col space-y-8 md:w-1/2">
 
             <!-- Heading Text -->
-            <h1 class="text-5xl font-gelasio text-center text-darkGrey md:text-7xl md:text-left md:max-w-md">Hello there, I'm Anthony</h1>
+            <h1 class="text-animation text-5xl font-gelasio text-center text-darkGrey md:text-7xl md:text-left md:max-w-md">Hello there, I'm Anthony</h1>
 
             <!-- Paragraph Text -->
             <p class="text-lg font-inter text-center text-darkGrey md:text-left md:max-w-sm">
@@ -58,7 +58,7 @@
             <!-- See Work Button -->
             <div class="flex justify-center md:justify-start">
                <a href="#work"
-                  class="p-3 px-6 text-white bg-darkGrey rounded-full baseline hover:bg-darkGreyHover duration-300 md:block">See
+                  class="p-3 px-6 text-white bg-darkGrey rounded-full transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-105 duration-300 md:block">See
                   Work</a>
             </div>
 
@@ -87,10 +87,10 @@
          <h2 class="text-2xl font-inter text-darkGrey py-2 md:max-w-sm">Selected Work</h2>
          <div class="divider bg-darkGrey"></div>
 
-         <!-- Portfolio Item 1 Flex Container -->
+         <!-- MAKR Flex Container -->
          <div class="flex flex-col-reverse justify-between px-8 items-center border-2 border-dashGrey border-dashed hover:bg-dashGrey hover:bg-opacity-30 duration-300 rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:px-16 md:py-6">
 
-            <!-- Portfolio Item Content Block -->
+            <!-- MAKR (Item 1) Content Block -->
             <div class="space-y-8 md:w-1/2">
 
                <!-- Heading -->
@@ -102,7 +102,7 @@
                <!-- See Case Study Button -->
                <div class="flex justify-center md:justify-start">
                   <a href="makr.html"
-                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline md:block">See More</a>
+                     class="p-3 px-6 text-white bg-darkGrey rounded-full transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-105 duration-300 md:block">See More</a>
                </div>
 
             </div>
@@ -118,10 +118,10 @@
 
          </div>
 
-         <!-- Portfolio Item 2 Flex Container -->
+         <!-- OFFICELITE (Item 2) Flex Container -->
          <div class="flex flex-col-reverse justify-between px-8 items-center border-2 border-dashGrey border-dashed hover:bg-dashGrey hover:bg-opacity-30 duration-300 rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:px-16 md:py-6">
 
-            <!-- Portfolio Item Content Block -->
+            <!-- OFFICELITE Content Block -->
             <div class="space-y-8 md:w-1/2">
 
                <!-- Heading -->
@@ -133,7 +133,7 @@
                <!-- See Case Study Button -->
                <div class="flex justify-center md:justify-start">
                   <a href="officelite.html"
-                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline md:block">See More</a>
+                     class="p-3 px-6 text-white bg-darkGrey rounded-full transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-105 duration-300 md:block">See More</a>
                </div>
 
             </div>
@@ -149,10 +149,10 @@
 
          </div>
 
-         <!-- Portfolio Item 3 Flex Container -->
+         <!-- DISHED (Item 3) Flex Container -->
          <div class="flex flex-col-reverse justify-between px-8 items-center border-2 border-dashGrey border-dashed hover:bg-dashGrey hover:bg-opacity-30 duration-300 rounded-xl mt-20 py-16 space-y-0 md:space-y-0 md:flex-row md:px-16 md:py-6">
 
-            <!-- Portfolio Item Content Block -->
+            <!-- DISHED Content Block -->
             <div class="space-y-8 md:w-1/2">
 
                <!-- Heading -->
@@ -164,7 +164,7 @@
                <!-- See Case Study Button -->
                <div class="flex justify-center md:justify-start">
                   <a href="#"
-                     class="p-3 px-6 text-white bg-darkGrey rounded-full baseline md:block">Coming Soon</a>
+                     class="p-3 px-6 text-white bg-darkGrey rounded-full md:block">Coming Soon</a>
                </div>
 
             </div>
