--- a/officelite.html
+++ b/officelite.html
@@ -25,7 +25,7 @@
          <!-- Logo -->
          <div class="pt-2">
             <a href="index.html">
-               <img src="assets/logo/logo-dark.svg" alt="Logo for Anthony Martinez" />
+               <img src="assets/logo/am-logo.svg" alt="Logo for Anthony Martinez" />
             </a>
          </div>
          <!-- Menu Items -->
